Fix flicker effect of title when rotating

--- a/draft-packages/tile/KaizenDraft/Tile/components/GenericTile.scss
+++ b/draft-packages/tile/KaizenDraft/Tile/components/GenericTile.scss
@@ -37,10 +37,13 @@ $tileHeight: 370px;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  height: 100%;
-
+  width: $tileWidth;
+  height: $tileHeight;
   backface-visibility: hidden;
+
+  @include ca-media-mobile {
+    width: 100%;
+  }
 }
 
 .faceBack {
@@ -54,6 +57,8 @@ $tileHeight: 370px;
 .title {
   text-align: center;
   padding-bottom: $kz-spacing-sm;
+  background-color: $kz-color-white;
+  backface-visibility: hidden;
 }
 
 .actions {
